<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">BookStore App</string>

    <!-- Label for overflow menu option that inserts fake data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that inserts data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_data">Insert</string>

    <!-- Label for overflow menu option that deletes all data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All</string>

    <!-- Title for the activity to add a new pet [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_item">Add a Book</string>

    <!-- Label for editor menu option to save pet and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor menu option to save pet and leave editor [CHAR LIMIT=20] -->
    <string name="action_home">Home</string>

    <!-- Label for editor overflow menu option that deletes the current pet [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_item">Name</string>
    <string name="category_price">Price</string>
    <string name="category_quantity">Quantity</string>
    <string name="category_supplier">Supplier</string>
    <string name="category_supplier_ph">Supplier Ph.</string>

    <!-- hints -->
    <string name="hint_name">Name</string>
    <string name="hint_item_quantity">Item Quantity</string>
    <string name="hint_supplier">Supplier</string>
    <string name="hint_supplier_ph">Supplier Phone</string>

    <string name="quantity">Quantity</string>
    <string name="supplier">Supplier</string>
    <string name="supplier_ph">Supplier Ph.</string>
    <string name="editor_insert_pet_failed">Insert Data Failed</string>
    <string name="editor_insert_pet_successful">Insert Successfully</string>
    <string name="failed_to_insert_row">Failed to insert row for:</string>
    <string name="uri_is_null">uri is null</string>
    <!-- Title text for the empty view, which describes the empty dog house image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">The Bookstore Catalog is Empty…</string>
    <!-- Subtitle text for the empty view that prompts the user to add a pet [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a book</string>
    <string name="error_null_cursor">Error retrieving data to show. Cursor is null</string>
    <string name="editor_activity_title_edit_item">Edit Book</string>
    <string name="editor_update_item_failed">Update Item Failed!</string>
    <string name="editor_update_item_successful">Item updated Successfully.</string>
    <string name="hint_item_price">Price</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>


</resources>
