<?xml version="1.0" encoding="utf-8"?>
<!-- Layout for the editor -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context="me.theofrancisco.android.bookstore.EditorActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_item" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingStart="4dp"
            android:paddingEnd="0dp">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_name"
                android:inputType="textCapWords" />

        </LinearLayout>

    </LinearLayout>

    <!-- Price category -->
    <LinearLayout
        android:id="@+id/container_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_price" />

        <EditText
            android:id="@+id/edit_price"
            style="@style/EditorFieldStyle"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:hint="@string/hint_item_quantity"
            android:inputType="number" />
    </LinearLayout>

    <!-- Quantity category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_quantity" />

        <!-- Quantity field -->
        <EditText
            android:id="@+id/edit_quantity"
            style="@style/EditorFieldStyle"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:hint="@string/hint_item_quantity"
            android:inputType="number" />
    </LinearLayout>

    <!-- Supplier category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_supplier" />

        <!-- Quantity field -->
        <EditText
            android:id="@+id/edit_supplier"
            style="@style/EditorFieldStyle"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:hint="@string/hint_supplier"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_supplier_ph" />

        <!-- Quantity field -->
        <EditText
            android:id="@+id/edit_supplier_ph"
            style="@style/EditorFieldStyle"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:hint="@string/hint_supplier_ph"
            android:autofillHints="@string/hint_supplier_ph"
            android:inputType="phone" />
    </LinearLayout>


</LinearLayout>
